# market_notifier

./: Pipfile  etfs.py  main.py  parser.py  portfolio.py  pyproject.toml  requrements
