[project]
name = "market_notifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Solovyev", email = "iterq1@gmail.com"},
]
dependencies = [
    "tinvest~=3.0",
]
requires-python = ">=3.10"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
